Register user method on HTTP
