# back-end/routes/auth.js
@@ -1,25 +1,41 @@
 const express = require('express');
 const router = express.Router();
 
-router.post('/register', (req, res, next) => {
+const userService = require('../services/user.service');
+
+router.post('/register', async (req, res, next) => {
     /*  
     #swagger.parameters['user'] = {
             in: 'body',
             description: 'The User to be registered',
             schema: {
+                $email: 'email@domain.com',
+                $password: '*****',
+                $firstname: 'John',
+                $lastname: 'Doe'
+            }
+    } 
+    #swagger.tags = ['Authentication']
+    #swagger.summary = 'Register a User'
+    #swagger.description = 'Register a new User'
+    #swagger.responses[200] =             
+        description: 'The User to be registered',
+        schema: {
             $email: 'email@domain.com',
             $password: '*****',
             $firstname: 'John',
             $lastname: 'Doe'
         }
-    } 
-    #swagger.tags = ['Authentication']
-    #swagger.summary = 'Register a User'
-    #swagger.description = 'Register a new User'
+    #swagger.responses[500] =             
+        description: 'Validation error',
+        schema: {
+            error: {
+                message: 'message',
+                status: 500
+            }
+        }
     */
-    const { email, password, firstname, lastname } = request.body;
-    res.setHeader('Content-Type', 'application/json')
-    res.json({'message': 'messages'});
+    await userService.registerUser(req, res, next);
 });
 
 router.post('/validate', (req, res, next) => {
