# back-end/services/user.model.js
@@ -1,0 +1,16 @@
+const mongoose = require('mongoose');
+
+const Schema = mongoose.Schema;
+
+const userSchema = new Schema(
+  {    
+    email: {type: String, required: true},
+    password: {type: String, required: true},
+    firstname: {type: String, required: true},
+    lastname: {type: String, required: true}
+  }
+);
+
+const User = mongoose.model('User', userSchema);
+
+module.exports = User;
